--- a/preamble.tex
+++ b/preamble.tex
@@ -31,6 +31,9 @@ vlined]{algorithm2e}
 \newcommand{\deficit}{\operatorname{deficit}}
 \newcommand{\udeficit}{\operatorname{udeficit}}
 
+\newcommand{\degree}{\operatorname{deg}}
+
+
 \newcommand{\denom}{d} 
 \newcommand{\fsr}{\mathcal{R}}
 
